--- a/index.html
+++ b/index.html
@@ -7,49 +7,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="javascript.js" defer></script>
     <title>Calculator</title>
 
 </head>
 
 <body>
-    
-    <div id="frame">
-
-        <div id="container-top">    
-            <div id="display">
-                <div id="calc"></div>
+    <div></div>
+    <div id="container">
+        <div id="frame">
+            <div id="frame-top">    
+                <div id="display">
+                    <div id="calc"></div>
+                </div>
+            </div>
+            <div id="keypad">
+                <div id="numbers">
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                    <button id="clear">Clear</button>
+                    <button class="number">0</button>
+                    <button id="equal">=</button>
+                </div>
+                <div id="operators">
+                    <button class="operator">÷</button>
+                    <button class="operator">×</button>
+                    <button class="operator">-</button>
+                    <button class="operator">+</button>
+                </div>
             </div>
         </div>
-
-        <div id="keypad">
-
-            <div id="numbers">
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
-                <button class="number">4</button>
-                <button class="number">5</button>
-                <button class="number">6</button>
-                <button class="number">7</button>
-                <button class="number">8</button>
-                <button class="number">9</button>
-                <button id="clear">Clear</button>
-                <button class="number">0</button>
-                <button id="equal">=</button>
-            </div>
-
-            <div id="operators">
-                <button class="operator">÷</button>
-                <button class="operator">×</button>
-                <button class="operator">-</button>
-                <button class="operator">+</button>
-            </div>
-
-        </div>
-
     </div>
     
+    <footer> 
+        <p>Copyright © 2023 joshwmz <a href="https://github.com/joshwmz" target="_blank"><i class="fa fa-github" id="github"></i></a></p>
+    </footer>
+
 </body>
 
 </html>
